src/github.com/ebay/beam/query/parser/testdata/select/errors/agg_var.bql
SELECT (COUNT(?rims) AS ?rimCount) ?brand
WHERE {
    ?rims <color> "Red"
    ?rims <brand> ?brand
}
